--- a/Banco/Banco.vbproj
+++ b/Banco/Banco.vbproj
@@ -108,6 +108,12 @@
     <Compile Include="frmCuenta.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmtarjeta.Designer.vb">
+      <DependentUpon>frmtarjeta.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmtarjeta.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frm_Empleados.Designer.vb">
       <DependentUpon>frm_Empleados.vb</DependentUpon>
     </Compile>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmCuenta.resx">
       <DependentUpon>frmCuenta.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmtarjeta.resx">
+      <DependentUpon>frmtarjeta.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Empleados.resx">
       <DependentUpon>frm_Empleados.vb</DependentUpon>
