--- a/Banco/App.config
+++ b/Banco/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Banco.My.MySettings._cnnBanco" connectionString="DATA SOURCE=localhost;PASSWORD=banco;USER ID=BANCO"
+        <add name="Banco.My.MySettings._cnnBanco" connectionString="DATA SOURCE=LOCALHOST ;PASSWORD=BANCO;USER ID=BANCO"
             providerName="Oracle.ManagedDataAccess.Client" />
     </connectionStrings>
     <startup>
