--- a/Banco/Banco.vbproj
+++ b/Banco/Banco.vbproj
@@ -264,6 +264,9 @@
   <ItemGroup>
     <None Include="Resources\registro-icono-8748-32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user_add.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
